examples/bad/6-main-recursive.afl
main::Int->Int;

Let rec main = (lambda x::Int . ((x)+((main)$((x)+(1))))::Int);